--- a/web-server/package.json
+++ b/web-server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "nodejs /src/app.js"
-//    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "nodejs /src/app.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
